--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav>
+    <a routerLink="/">Pedidos</a> |
+    <a routerLink="/cozinha">Cozinha</a>
+  </nav>
+  
+  <router-outlet></router-outlet>
+  
   <app-root></app-root>
+  
 </body>
 </html>
