Arrumando o tamanho fixo das telas para mobile, arrumando o botao de status e fazendo a tela inicial do gerente.

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
   <nav>
-    <a routerLink="/">Pedidos</a> |
-    <a routerLink="/cozinha">Cozinha</a>
+    <a routerLink="/"></a>
+    <a routerLink="/cozinha"></a>
   </nav>
-  
-  <router-outlet></router-outlet>
+  <div class="container">
+    
+    <router-outlet></router-outlet>
+  </div>
   
   <app-root></app-root>
   
