Criação das pastas do cliente, inicio do css e do ts

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
   <nav>
     <a routerLink="/"></a>
     <a routerLink="/cozinha"></a>
+    <a routerLink="/cardapio"></a>
+    <a routerLink="/info"></a>
+    <a routerLink="/carrinho"></a>
+    <a routerLink="/sucesso"></a>
   </nav>
   <div class="container">
     
