css da tela do cardapio finalizada

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <a routerLink="/"></a>
+    <a routerLink="/gerente"></a>
     <a routerLink="/cozinha"></a>
     <a routerLink="/cardapio"></a>
     <a routerLink="/info"></a>
