arrumando mas algumas funcionalidades das telas do cliente e arrumando algumas funcionalidades na tela da cozinha

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <nav>
     <a routerLink="/gerente"></a>
     <a routerLink="/cozinha"></a>
-    <a routerLink="/cardapio"></a>
+    <a routerLink=""></a>
     <a routerLink="/info"></a>
     <a routerLink="/carrinho"></a>
     <a routerLink="/sucesso"></a>
